WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156175
[SVG -> OTF Converter] Crash when trying to re-convert a previously-failed font conversion
https://bugs.webkit.org/show_bug.cgi?id=156175
Summary
[SVG -> OTF Converter] Crash when trying to re-convert a previously-failed fo...
Myles C. Maxfield
Reported
2016-04-04 11:42:23 PDT
[SVG -> OTF Converter] Crash when trying to re-convert a previously-failed font conversion
Attachments
Patch
(1.82 KB, patch)
2016-04-04 11:44 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(1.86 KB, patch)
2016-04-04 11:44 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2016-04-04 11:44:03 PDT
Created
attachment 275563
[details]
Patch
Myles C. Maxfield
Comment 2
2016-04-04 11:44:26 PDT
Created
attachment 275564
[details]
Patch
Myles C. Maxfield
Comment 3
2016-04-04 11:44:43 PDT
<
rdar://problem/25130547
>
David Kilzer (:ddkilzer)
Comment 4
2016-04-04 11:47:11 PDT
Comment on
attachment 275564
[details]
Patch r=me
WebKit Commit Bot
Comment 5
2016-04-04 12:39:06 PDT
Comment on
attachment 275564
[details]
Patch Clearing flags on attachment: 275564 Committed
r199014
: <
http://trac.webkit.org/changeset/199014
>
WebKit Commit Bot
Comment 6
2016-04-04 12:39:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug